# Projects

./: .gitignore  CMakeLists.txt  Library.cpp  OrganismSimulator.cpp  Organizm.cpp  Organizm.h  PartitionAlgorithm.cpp  README.md  Reporter.cpp  Reporter.h  Reports.h  Roslina.cpp  Roslina.h  Swiat.cpp  Swiat.h  Zwierze.cpp  Zwierze.h
Animals/: Leniwiec.cpp  Leniwiec.h  Lis.cpp  Lis.h  Owca.cpp  Owca.h  Tygrys.cpp  Tygrys.h  Wilk.cpp  Wilk.h
Partitions/: PartitionAlgorithm.h  PartitionNumbers.cpp  PartitionNumbers.h  Partitions.cpp  Partitions.h  README.md  main.cpp
Plants/: Guarana.cpp  Guarana.h  Mlecz.cpp  Mlecz.h  Trawa.cpp  Trawa.h
